--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: #7cc6fe;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  min-height: 100vh ;
+  width: 100%;
+}
+
+.app {
+  background-color: #252d42;
+  width: 450px;
+  border-radius: 15px;
+  padding: 20px;
+  display: flex;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75)
+}
+
+.quizz {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.question__section {
+  flex: 0 0 50%;
+}
+
+.question__count {
+  margin-bottom: 20px;
+}
+
+.question__count span {
+  font-size: 28px;
+}
+
+.question__text {
+  margin-bottom: 15px;
+}
+
+.answer__section {
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+button{
+  width: 100%;
+  font-size: 16px;
   color: white;
+  display: flex;
+  background-color: #252d42;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  padding: 5px;
+  cursor: pointer;
+  border: 2px solid #234668;
+  margin: 5px 0;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  background: #234668;
+  transition: all 0.3 ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section__score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 24px;
+  width: 100%;
+}
+
+.refresh__btn {
+  margin-top: 25px;
 }
